test/expected/static_cast_i-c.out
static cast x into int
^
1: error: static_cast not supported in C
